Update Corrections Alberto et Andrea

--- a/Chap3-NEMOdetectors.tex
+++ b/Chap3-NEMOdetectors.tex
@@ -552,13 +552,13 @@ $^{\text{48}}$Ca  & 5.25 &[6.4 $\times$ $^{+\text{0.7}}_{-\text{0.6}}$ $^{+\text
 \section{The SuperNEMO demonstrator module}\label{sec:SuperNEMO}
 
 
-\NI Based on the success of NEMO-3, a new detector, SuperNEMO, has been proposed. The idea of this detector is to perform a background-free search for 0$\nu\beta\beta$ decay (10$^{\text{-4}}$~events/keV/kg/y in the region of interest) [??]. The construction of a first SuperNEMO module is ongoing at LSM. This first module, called demonstrator module is based on the same philosophy than NEMO-3. A central frame supports thin $\beta\beta$ foils surrounded by two trackers enclosed by a calorimeter. The module is 4~m high, 6~m long and 2~m wide. Figure~\ref{SuperNEMOexplodedView} shows an exploded view of the demonstrator module.
+\NI Based on the success of NEMO-3, a new detector, SuperNEMO, has been proposed. The goal of the SuperNEMO experiment is the search for the 0$\nu\beta\beta$ decays with a sensitivity of 10$^{\text{26}}$~y corresponding to m$_{\beta\beta}$ < 0.04 - 0.1~eV. The construction of a first SuperNEMO module called demonstrator is ongoing at LSM. It consists of a central frame supports thin $\beta\beta$ foils surrounded by two trackers enclosed by a calorimeter as shown in Figure~\ref{SuperNEMOexplodedView}. The module is 4~m high, 6~m long and 2~m wide.
 
 
 \bigskip
 
 
-\NI SuperNEMO is not only a scaled-up version of NEMO-3. Research and development (R\&D) has be performed in order to upgrade many aspects of the design as the radiopurity components and the detector performances. This module will be used to validate all the design upgrades and verify that a very low level of background is achievable with such a large mass of detector and source foils. It will contain 7~kg of $^{\text{82}}$Se to reach a half-life sensitivity of $\sim$~6~$\times$~10$^{\text{24}}$~years, after 2.5~years of data-taking, in best case scenario.
+\NI An extended R\&D program has been performed in order to improve the detector design and its radiopurity to increase detector performance. This module will be used to validate all the design upgrades and verify that a very low level of background is achievable (10$^{\text{-4}}$~events/keV/kg/y in the region of interest) with such a large mass of detector and source foils. It will contain 7~kg of $^{\text{82}}$Se to reach a half-life sensitivity of $\sim$~6~$\times$~10$^{\text{24}}$~years, after 2.5~years of data-taking, in best case scenario.
 
 
 
@@ -577,8 +577,8 @@ $^{\text{48}}$Ca  & 5.25 &[6.4 $\times$ $^{+\text{0.7}}_{-\text{0.6}}$ $^{+\text
 \subsection{Source foils}\label{sec:SourceFoilsSN}
 
 
-\NI The demonstrator module will contain 7~kg of $^{\text{82}}$Se, enriched in Russia using a centrifugation method. The choice of this isotope has been mainly motivated because none of its characteristics, phase space, NME, 2$\nu\beta\beta$ half-life and isotropic abundance, is an obstacle to the search for 0$\nu\beta\beta$. Futhermore its high transition energy is far away from the majority of the background coming from radioactivity.
-Since the source foils are the central part of the detector, it has the strictest radiopurity requirements, respectively 2$\mu$Bq/kg and 10$\mu$Bq/kg in $^{\text{208}}$Tl and $^{\text{214}}$Bi.
+\NI The demonstrator module will contain 7~kg of enriched $^{\text{82}}$Se. The choice of this isotope has been mainly motivated because none of its characteristics, phase space, NME, 2$\nu\beta\beta$ half-life and isotropic abundance, is an obstacle to the search for 0$\nu\beta\beta$. Futhermore its high end-point is far away from the majority of the background coming from radioactivity. To reach a sensitivity of $\sim$ 10$^{\text{26}}$~y in 500~kg~$\times$~y of exposure with $^{\text{82}}$Se it has shown that the radio-purity level of the source foil in $^{\text{208}}$Tl and $^{\text{214}}$Bi must be better than respectively 2~$\mu$Bq/kg and 10~$\mu$Bq/kg~\cite{PhysicsCaseSuperNEMO}.
+
 
 \bigskip
 
@@ -590,20 +590,20 @@ Since the source foils are the central part of the detector, it has the strictes
 \begin{center}
 \includegraphics[scale=0.33]{pictures/Chap3/foil.png}
 \includegraphics[scale=0.075]{pictures/Chap3/P1090162.JPG}
-\caption{Left : Selenium source foil final geometry. It is divided in 36 foils
-(34 with 13.55 cm width and 2 with 12.5 cm width). Right : Picture of one strip : the Se+PVA pad is surrounded by two raw mylar foils. These two raw mylar foils are welded.} 
+\caption{Left : Source plane design. It is divided in 36 foils
+(34 with 13.55 cm width and 2 with 12.5 cm width). Right : Picture of one strip.} 
 \label{SuperNEMOFoils}
 \end{center}
 \end{figure}
 
 
-\NI They are composite foils with a surface densities of 40~-~60~mg/cm$^\text{2}$. The selenium is under a powder form which is mixed with a radiopure glue (PolyVinyl Alcohol~:~PVA) and ultrapure water to obtain a liquid paste. This paste is then spread out between two mylar sheets of 12~$\mu$m thick. The mylar films have micro-holes to allow a good coupling between the paste and the foil and facilitate evaporation. These holes were made by an ions beam which can contaminate the source foil. It is in this optic that a new foil fabrication procedure has been proposed and studied in R\&D. The new method consists of unmoulding the selenium foil and cut it into pads. These pads are then inserted into two mylar foils without holes, joined with a weld as shown in Figure~\ref{SuperNEMOFoils}. More details on source foil optimisation will be given in Chapter~4.
+\NI They are composite foils with a surface densities of 40~-~60~mg/cm$^\text{2}$. The selenium is under a powder form which is mixed with a radiopure glue (PolyVinyl Alcohol~:~PVA) and ultrapure water to obtain a liquid paste. This paste is then spread out between two backing films made of 12~$\mu$m thick mylar sheets. The mylar backing film has been produced by exposing high purity raw mylar film to an ion beam in order to produce micro-holes ($\sim$~0.4~$\mu$m in diameter) to allow a good coupling between the paste and the foil and facilitate evaporation. The ion beam is composed of $^{\text{84}}$Kr ions with an energy of 3~MeV/nucleons and a luminosity is around 5~$\times$~10$^{\text{11}}$ ions/s. The fabrication of these holes can then contaminate the source foil. It is in this optic that a new foil fabrication procedure has been proposed and studied in R\&D. The new method consists of unmoulding the selenium foil and cut it into pads. These pads are then inserted into two raw mylar foils, joined with a weld as shown in Figure~\ref{SuperNEMOFoils}. More details on source foil optimisation will be given in Chapter~4.
 
 
 \bigskip
 
 
-\NI To measure the very strict purity of the foils, 2$\mu$Bs/kg and 10$\mu$Bs/kg in $^{\text{208}}$Tl and $^{\text{214}}$Bi respectively, the NEMO collaboration decided to develop and build a dedicated detector called BiPo~\cite{BiPoDetector}. The BiPo detector is based on the observation of the so-called Bi-Po events from the decay chain of $^{\text{238}}$U and $^{\text{232}}$Th. Bi-Po events are cascades of $\beta$ and delayed $\alpha$ decays. For example, as shown in Figure~\ref{BiPoDecayChain}, in uranium decay chain, $^{\text{214}}$Bi is a $\beta$ emitter decaying to $^{\text{214}}$Po, which is itself an $\alpha$ emitter with a characteristic half-life of 164~$\mu$s.
+\NI To measure the very strict purity of the foils, 2$\mu$Bs/kg and 10$\mu$Bs/kg in $^{\text{208}}$Tl and $^{\text{214}}$Bi respectively, the NEMO collaboration decided to develop and build a dedicated detector called BiPo~\cite{BiPoDetector}. The concept of the BiPo detector is the identification of the so-called Bi-Po events which corresponds to the detection of an electron followed by a delayed $\alpha$ particle. For example, as shown in Figure~\ref{BiPoDecayChain}, in uranium decay chain, $^{\text{214}}$Bi is a $\beta$ emitter decaying to $^{\text{214}}$Po, which is itself an $\alpha$ emitter with a characteristic half-life of 164~$\mu$s. The BiPo technique consists in installing the material of interest between two thin ultra pure plastic scintillators. The $^{\text{208}}$Tl and $^{\text{214}}$Bi contaminations are measured by detecting the $\beta$-decay as an energy deposition in one scintillator and no coincidence signal from the opposite siden, and the delayed $\alpha$ particle as a delayed signal in the second opposite scintillator without a coincidence in the first one. 
 
 
 \begin{figure}[h!]
@@ -615,7 +615,7 @@ Since the source foils are the central part of the detector, it has the strictes
 \end{figure}
 
 
-\NI The BiPo detector has been installed in 2012 at Canfranc Underground Laboratory in Spain. It is made of 2 identical modules, each of them containing 40 scintillator blocks (coupled with 5'' PMTs). Each optical module covers an area of 30 $\times$ 30 cm$^\text{2}$, as presented in Figure~\ref{BiPoDetector}. This segmentation allows detection of possible hot spots on the foil. In a first step, the detector took data without any foils to measure its own level of background. The results of 0.16~$\mu$Bq/m$^\text{2}$ in $^{\text{214}}$Bi and 1.28~$\mu$Bq/m$^\text{2}$ in $^{\text{208}}$Tl allow to reach the expected sensitivity of 10 and 2~$\mu$Bq/kg in $^{\text{214}}$Bi and $^{\text{208}}$Tl, a few months of data taking~\cite{BiPoDetector}. BiPo detector also measured different source foil components like the PVA or the Mylar film. The results of these measurements will be given in Chapter~4. Finally, some final foils have been measured before introduction into in the demonstrator in order to validate their radiopurity. More details are given in Appendix~1.  
+\NI The BiPo detector has been installed in 2012 at Canfranc Underground Laboratory in Spain. It is made of 2 identical modules, each of them containing 40 scintillator blocks (coupled with 5'' PMTs). Each optical module covers an area of 30 $\times$ 30 cm$^\text{2}$, as presented in Figure~\ref{BiPoDetector}. This segmentation allows detection of possible hot spots on the foil. In a first step, the detector took data without any foils to measure its own level of background. The results of 0.16~$\mu$Bq/m$^\text{2}$ in $^{\text{214}}$Bi and 1.28~$\mu$Bq/m$^\text{2}$ in $^{\text{208}}$Tl allow to reach the expected sensitivity of 10 and 2~$\mu$Bq/kg in $^{\text{214}}$Bi and $^{\text{208}}$Tl, a few months of data taking~\cite{BiPoDetector}. BiPo detector also measured different source foil components like the PVA or the Mylar film. The results of these measurements will be given in Chapter~4. F%inally, some final foils have been measured before introduction into in the demonstrator in order to validate their radiopurity. More details are given in Appendix~1.  
 
 
 \begin{figure}[h!]
@@ -634,15 +634,18 @@ Since the source foils are the central part of the detector, it has the strictes
 \subsection{Tracker}
 
 
-\NI The SuperNEMO tracker is an assembly of four parts called C-sections due to their C-shape. It contains 2034~Geiger cells arranged in 9~layers parallel to the foil within a gas mixture of He~(95~\%), ethyl alcohol~(4~\%), Ar~(1~\%)~\cite{trackerSN}. Each cell is made of a 40~$\mu$m stainless steel central anode surrounded by eight 50~$\mu$m ground wires. To maintain the tracking properties of the detector, the mixture ratio of the gas must be kept constant. A gas system has been developed to ensure its mixture, purification, and sends it into the detector. 
-
- 
+\NI The SuperNEMO tracker is similar in conception to the one of NEMO-3. It contains 2034~Geiger cells arranged in 9~layers parallel to the foil within a gas mixture of He~(95~\%), ethyl alcohol~(4~\%), Ar~(1~\%)~\cite{trackerSN}. Each cell is made of a 40~$\mu$m stainless steel central anode surrounded by eight 50~$\mu$m ground wires. To maintain the tracking properties of the detector, the mixture ratio of the gas must be kept constant. A gas system has been developed to ensure its mixture, purification, and sends it into the detector. In its fabrication, the SuperNEMO tracker consists of an assembly of four parts called C-sections due to their C-shape. 
 
 
 \bigskip
 
 
-\NI In order to reduce the risk of contamination during the manufactoring phase of wires, a wiring robot has been designed and built. A great care has also been taken concerning the radiopurity of the materials. Each of them has been tested in germanium detector. The construction of the C-sections took place under clean room conditions at the Mullard Space Science Laboratory~(MSSL). To validate both the mechanical processes and the choice of the materials, emanation measurements of three of the four C-sections have been realized. The last C-section has not been measured condidering no changes in its material and production process. The results of these measurements are summarized in Table~\ref{tab:RadonEmanation}. Extrapolated to full demonstrator, a value of the activity of 0.21~mBq/m$^{\text{3}}$ can be obtained at nominal flowrate. The value of 0.12~mBq/m$^{\text{3}}$ can be achieved when the flush rate is at 1m$^{\text{3}}$/hr.
+An additional step forward in tracker production has been the design and construction
+of a wiring robot, which has automated the manufacturing process. This greatly
+reduces the risk of contamination of the 260,000 wires
+
+
+\NI In order to reduce the risk of contamination of the wires, a wiring robot has been designed and built to automate the manufacturing process. A great care has also been taken concerning the radiopurity of the materials (copper, steel, duracon). Each of them has been tested in germanium detector. The construction of the cassettes and their assempby in the C frame took place under clean room conditions. To validate both the mechanical processes and the choice of the materials, radon emanation measurements of three of the four C-sections have been realized. The last C-section has not been measured condidering no changes in its material and production process. The results of these measurements are summarized in Table~\ref{tab:RadonEmanation}. Extrapolated to full demonstrator, a value of the activity of 0.21~mBq/m$^{\text{3}}$ can be obtained at nominal flowrate. The value of 0.12~mBq/m$^{\text{3}}$ can be achieved when the flush rate is at 1m$^{\text{3}}$/hr.
 
 
 \begin{table}[h!]
@@ -664,7 +667,7 @@ C2 & 3.28 $\pm$ 1.39~mBq \\
 \bigskip
 
 
-\NI The commissioning of the first C-section has been realised using cosmic muon events. Scintillator planes below the tracker volume were acting as a trigger. A picture of a C-section and cosmic muon event is shown in Figure~\ref{SnemoTracker}. Finally the total 2034 cells have been tested, 23~cells are considered as bad due to their self trigger or a bad plasma propagation. The proportion of operational cells is then 98.9~\%. 
+\NI The commissioning of the first C-section has been realized using cosmic muon events. Scintillator planes below the tracker volume were acting as a trigger. A picture of a C-section and cosmic muon event is shown in Figure~\ref{SnemoTracker}. Finally the total 2034 cells have been tested, 23~cells are considered as bad due to their self trigger or a bad plasma propagation. The proportion of fully operational or recoverable channels is 99~\% over the first three tracker sections. 
 
 
 \begin{figure}[h!]
@@ -691,7 +694,7 @@ C2 & 3.28 $\pm$ 1.39~mBq \\
 \bigskip
 
 
-\NI The two main walls are located on opposite sides of the source foil faces. Each main wall contains 260~polystyrene cubic scintillator blocks of 256~mm $\times$ 256~mm $\times$ 194~mm, coupled to 8'' low radioactive PMT (R5912-03). The main difference with the NEMO-3 blocks is that the PMT is directly coupled to the scintillator block as shown in Figure~\ref{SnemoOpticalModule}. Futhermore, the polystyrene scintillators used in NEMO-3 have been replaced with poly-vinyl toluene (PVT). Thanks to this new design the energy resolution has been improved by a factor two, the FWHM has been measured to be 8~\% at 1~MeV.
+\NI The two main walls are located on opposite sides of the source foil faces. Each main wall contains 260~polystyrene cubic scintillator blocks of 256~mm $\times$ 256~mm $\times$ 194~mm, coupled to 8'' low radioactive PMT (R5912-03). The main difference with the NEMO-3 blocks is that the PMT is directly coupled to the scintillator block as shown in Figure~\ref{SnemoOpticalModule}. Futhermore, the polystyrene scintillators used in NEMO-3 have been replaced with poly-vinyl toluene (PVT). Thanks to this new design the energy resolution has been improved by a factor two, the FWHM has been measured to be 8~\% at 1~MeV~as shown in Figure~\ref{EnergyResolutionCaloBlock}~\cite{SNCalorimeter}.
 
 
 
@@ -704,13 +707,22 @@ C2 & 3.28 $\pm$ 1.39~mBq \\
 \end{figure}
 
 
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[scale=0.25]{pictures/Chap3/EnergyResolution.png}
+\caption{Energy resolution of the optical modules.}
+\label{EnergyResolutionCaloBlock}
+\end{center}
+\end{figure}
+
+
 
 \NI The calorimeter is completed with two $\gamma$-veto capping the top and the bottom of the detector containing 64~plastic scintillator blocks of 210~mm $\times$ 200~mm $\times$ 145~mm. These blocks are coupled to 5'' PMTs (R6594). Finally, two x-walls cover the sides of the detector. They are made of 32~plastic scintillator blocks (290~mm $\times$ 304~mm $\times$ 145~mm) also coupled to 5'' PMT. Note that the first and last rows of the main wall are coupled with 5''~PMTs since these blocks are partially covered by the $\gamma$-veto and will probably not be used for the analysis.
 
 \bigskip
 
 
-\NI To improve the light collection, all the blocks are wrapped into teflon for each block sides except the entry face which is covered by 6~$\mu$m of aluminized mylar. Figure~\ref{SnemoCaloFrontView} is a picture of the SuperNEMO main wall during its construction at LSM. A radon-free air will be introduced very close to the PMT to avoid high radon concentration coming from PMT emanations.
+\NI To improve the light collection, all the block sides are wrapped into teflon film while the entry face is covered by 6~$\mu$m of aluminized mylar. Figure~\ref{SnemoCaloFrontView} is a picture of the SuperNEMO main wall during its construction at LSM. %A radon-free air will be introduced very close to the PMT to avoid high radon concentration coming from PMT emanations.
 
 
 \begin{figure}[h!]
@@ -727,13 +739,13 @@ C2 & 3.28 $\pm$ 1.39~mBq \\
 \subsection{Calibration system}
 
 
-\NI The strategy to calibrate both energy and time is the same as that used in NEMO-3. Monthly, during dedicated runs, $^{\text{207}}$Bi sources will be introduced in the detector to calibrate the absolute energy scale. Between these runs, the response and the linearity of the optical modules is monitored daily. 
+\NI The strategy to calibrate both energy and time is the same as that used in NEMO-3. Monthly, during dedicated runs, $^{\text{207}}$Bi sources will be introduced in the detector to calibrate the absolute energy scale. Between these runs, the response and the linearity will be monitored daily. 
 
 
 \bigskip
 
 
-\NI A first improvement in the calibration system consists of the removal of the calibration tubes in which the sources were introduced. In this new system, the $^{\text{207}}$Bi sources are guided into position thanks to a system of weights and stepper motors. In this way, no material will remain in the detector outside the calibration runs.
+\NI An improvement in the calibration system consists of the removal of the calibration tubes in which the sources were introduced. In this new system, the $^{\text{207}}$Bi sources are guided into position thanks to a system of weights and stepper motors. In this way, no material will remain in the detector outside the calibration runs.
 
 
 \bigskip
@@ -755,18 +767,18 @@ C2 & 3.28 $\pm$ 1.39~mBq \\
 \subsection{Shieldings}
 
 
-\NI The strategy to protect the detector against the neutron and $\gamma$-ray fluxes is the same as used in NEMO-3. A shielding made of 20~cm of iron, 20~cm of paraffin will be installed around the detector. These shieldings will be surrounded themselves by 35~cm of borated water and 30~cm of wood. Finally, to minimse radon diffusion an anti-radon tent will surround the detector and will be constantly flushed with filtered air.
+\NI The strategy to protect the detector against the neutron and $\gamma$-ray fluxes is similar to the NEMO-3 strategy. Multilayer shields made of iron (20~cm), paraffin (20~cm), borated water (20~cm) and wood (30~cm) will surround the detector to reduce photon and neutron fluxes coming from the rocks of the laboratory. Finally, to minimse radon diffusion an anti-radon tent will surround the detector and will be constantly flushed with filtered air.
 
 
 \subsection{Prospectives}
 
 
-\NI The construction of the demonstrator began with most of the different components already manufactured and present at LSM. The first and second calorimeter walls were built at the end of 2016 and beginning of 2017. Two C-sections have been assembled and coupled to the first calorimeter wall to form a half-detector. The installation of the source foils is planned during the summer of 2017, just after the source deployment system. The gas system has been installed.
+\NI The construction of the demonstrator began with most of the different components already manufactured and present at LSM. The first and second calorimeter walls were built between the end of 2016 and the beginning of 2017. Two C-sections have been assembled and coupled to the first calorimeter wall to form a half-detector. The installation of the source foils is planned by summer of 2017.% , just after the source deployment system. The gas system has been installed.
 
 \bigskip
 
 
-\NI In case the demonstrator module is successful, other SuperNEMO modules could be deployed. The idea would be to investigate 0$\nu\beta\beta$ with 100~kg of $^{\text{82}}$Se to reach a half-life sensitivity of~10$^{\text{26}}$~years, corresponding to an effective neutrino mass of 50~-~100~meV [ref]. The 100~kg of $^{\text{82}}$Se could be divided between 20 identical and individual modules, in a way to provide flexibility in the modules location as they can be arranged to maximise the available space in underground laboratories. As the source is decoupled from the detector, other isotopes as $^{\text{150}}$Nd and $^{\text{48}}$Ca could also be introduced.
+\NI In case the demonstrator module is successful, other SuperNEMO modules could be deployed. The goal would be to investigate 0$\nu\beta\beta$ with 100~kg of $^{\text{82}}$Se to reach a half-life sensitivity of~10$^{\text{26}}$~years, corresponding to an effective neutrino mass of 50~-~100~meV. The 100~kg of $^{\text{82}}$Se could be divided between 20 identical and independent modules, in a way to provide flexibility in the modules location as they can be arranged to maximise the available space in underground laboratories. As the source is decoupled from the detector, other isotopes as $^{\text{150}}$Nd and $^{\text{48}}$Ca could also be introduced.
 
 
 \bigskip
